[gd_scene load_steps=7 format=2]

[ext_resource path="res://Testing/Tiles/32RoguesWallTiles.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Scenes/CaveWorld.gd" type="Script" id=2]
[ext_resource path="res://Testing/Tiles/32RoguesFloorTiles.tscn" type="PackedScene" id=3]
[ext_resource path="res://Testing/Tiles/32RoguesActorMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://Testing/Actors/ActorTest.tscn" type="PackedScene" id=5]
[ext_resource path="res://Testing/Actors/PlayerTest.tscn" type="PackedScene" id=6]

[node name="CaveWorld" type="Node"]
script = ExtResource( 2 )
player = ExtResource( 6 )
actor = ExtResource( 5 )

[node name="32RoguesWallTiles" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 50, 50 )

[node name="32RoguesFloorTiles" parent="." instance=ExtResource( 3 )]

[node name="Actors" type="Node" parent="."]

[node name="32RoguesActorMap" parent="." instance=ExtResource( 4 )]
